# Compliance-Aware-Sales-Copilot-for-ERP-Teams

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  app.py  config.toml.example  main.py  pyproject.toml
.docs/: architecture-decisions.md  fix-plan-review-2026-04-18.md  implementation-fix-proposal-2026-04-18.md  implementation-log.md  implementation-review-2026-04-18.md  memory.md  plan-review-2026-04-18.md  task-commits.md
.github/workflows/: ci.yml
data/: seed_data (3).json
src/: __init__.py  _registry.py  chains.py  data.py  graph.py  guardrails.py  langsmith_config.py  logging_config.py  models.py  observability.py  router.py  settings.py  state.py  tools.py
tests/: __init__.py  test_demo.py  test_router.py  test_tools.py
